# flern-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.TXT  README.md
.github/workflows/: docker-image.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
migrations/: 20250919140040_init.sql  20250927104825_progress.sql  20251005140620_indexes.sql
src/: error.rs  lib.rs  main.rs
src/auth/: error.rs  jwt.rs  mod.rs  password.rs  token.rs
src/config/: config_dir.rs  error.rs  mod.rs
src/model/: access.rs  database.rs  error.rs  mod.rs  repo.rs
src/model/entity/: answer.rs  lesson.rs  mod.rs  module.rs  progress_token.rs  task.rs  user.rs  user_progress.rs  user_task_attempt.rs
src/utils/: mod.rs  signal.rs  uploads.rs
src/web/: context.rs  doc.rs  error.rs  mod.rs  state.rs
src/web/dto/: lessons.rs  mod.rs  modules.rs  progress.rs  tasks.rs
src/web/middlewares/: auth.rs  mod.rs
src/web/routes/: lessons.rs  mod.rs  modules.rs  progress.rs  tasks.rs  user.rs
tests/: common.rs  user.rs
