[package]
name = "flern"
version = "0.1.0"
edition = "2024"
description = "Flern — W.I.P backend for FLERN project."
license-file = "LICENSE.TXT"
readme = "README.md"

[dependencies]
# Basic
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "time", "signal"] }
chrono = { version="0.4", features=["serde"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"] } 
tracing-error = "0.2"

# Web
axum = { version="0.8" }
tower-cookies = "0.11"
tower-http = { version="0.6", features=["cors", "fs"] }

# JWT / Password Hashing
argon2 = { version="0.5.3", features=["password-hash", "rand", "std"] }
jsonwebtoken = "9.3"

# Serialization/Deserialization
serde = { version="1", features=["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
thiserror = "2.0"

# Database
sqlx = { version="0.8", features=["runtime-tokio", "postgres", "chrono", "uuid"] }
async-trait = "0.1"

# API documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
url = "2.5"
tempfile = "3"
axum-test = "18.1"
