[package]
name = "flern-cli"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE.TXT"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
flern = { path = "../" }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["derive", "postgres", "runtime-tokio"] }
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
